# pico-freertos-sample

./: CMakeLists.txt
freertos/: CMakeLists.txt  FreeRTOSConfig.h
src/: CMakeLists.txt  main.c
src/inc/: ds3231.h  i2c_lcd.h
